// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SidebarNavigation > matches the snapshot 1`] = `
"<div class="sideBar" style="width: 16rem;">
  <div class="header"><a class="iconButton logo logo" title="Home">
      <font-awesome-icon-stub aria-hidden="true" icon="fas,wave-square" size="xl" fixed-width=""></font-awesome-icon-stub><span class="visually-hidden"> Home </span>
    </a><button class="iconButton" type="button" title="Close Navigation">
      <font-awesome-icon-stub aria-hidden="true" icon="fas,angles-left" size="sm" fixed-width=""></font-awesome-icon-stub><span class="visually-hidden">Close Navigation</span>
    </button></div>
  <nav>
    <ul class="navigation">
      <li class="sidebarItem">
        <!--v-if-->
        <ul>
          <li data-test-id="item"><a exactactiveclass="current" class="iconButton link link" title="Discover">
              <font-awesome-icon-stub aria-hidden="true" icon="fas,compact-disc" size="sm" fixed-width=""></font-awesome-icon-stub><span class="">Discover</span>
            </a></li>
        </ul>
      </li>
      <li class="sidebarItem">
        <h4 class="title">Browse</h4>
        <ul>
          <li data-test-id="item"><a exactactiveclass="current" class="iconButton link link" title="Music">
              <font-awesome-icon-stub aria-hidden="true" icon="fas,headphones" size="sm" fixed-width=""></font-awesome-icon-stub><span class="">Music</span>
            </a></li>
          <li data-test-id="item"><a exactactiveclass="current" class="iconButton link link" title="Radio Stations">
              <font-awesome-icon-stub aria-hidden="true" icon="fas,radio" size="sm" fixed-width=""></font-awesome-icon-stub><span class="">Radio Stations</span>
            </a></li>
          <li data-test-id="item"><a exactactiveclass="current" class="iconButton link link" title="Podcasts">
              <font-awesome-icon-stub aria-hidden="true" icon="fas,podcast" size="sm" fixed-width=""></font-awesome-icon-stub><span class="">Podcasts</span>
            </a></li>
        </ul>
      </li>
      <li class="sidebarItem">
        <h4 class="title">Music</h4>
        <ul>
          <li data-test-id="item"><a exactactiveclass="current" class="iconButton link link" title="Albums">
              <font-awesome-icon-stub aria-hidden="true" icon="fas,compact-disc" size="sm" fixed-width=""></font-awesome-icon-stub><span class="">Albums</span>
            </a></li>
          <li data-test-id="item"><a exactactiveclass="current" class="iconButton link link" title="Artists">
              <font-awesome-icon-stub aria-hidden="true" icon="fas,users" size="sm" fixed-width=""></font-awesome-icon-stub><span class="">Artists</span>
            </a></li>
          <li data-test-id="item"><a exactactiveclass="current" class="iconButton link link" title="Playlists">
              <font-awesome-icon-stub aria-hidden="true" icon="fas,list" size="sm" fixed-width=""></font-awesome-icon-stub><span class="">Playlists</span>
            </a></li>
          <li data-test-id="item"><a exactactiveclass="current" class="iconButton link link" title="Favourites">
              <font-awesome-icon-stub aria-hidden="true" icon="fas,heart" size="sm" fixed-width=""></font-awesome-icon-stub><span class="">Favourites</span>
            </a></li>
          <li data-test-id="item"><a exactactiveclass="current" class="iconButton link link" title="Genres">
              <font-awesome-icon-stub aria-hidden="true" icon="fas,music" size="sm" fixed-width=""></font-awesome-icon-stub><span class="">Genres</span>
            </a></li>
        </ul>
      </li>
      <li class="sidebarItem">
        <h4 class="title">Playlists</h4>
        <ul>
          <li data-test-id="item"><a exactactiveclass="current" class="iconButton link link" title="Random Playlist">
              <font-awesome-icon-stub aria-hidden="true" icon="fas,list" size="sm" fixed-width=""></font-awesome-icon-stub><span class="">Random</span>
            </a></li>
        </ul>
      </li>
    </ul>
  </nav>
</div>"
`;

exports[`SidebarNavigation > when toggle button is clicked > matches the snapshot 1`] = `
"<div class="sideBar" style="width: 5rem;">
  <div class="header"><a class="iconButton logo logo" title="Home">
      <font-awesome-icon-stub aria-hidden="true" icon="fas,wave-square" size="xl" fixed-width=""></font-awesome-icon-stub><span class="visually-hidden"> Home </span>
    </a><button class="iconButton" type="button" title="Open Navigation">
      <font-awesome-icon-stub aria-hidden="true" size="sm" fixed-width="" icon="fas,angles-right"></font-awesome-icon-stub><span class="visually-hidden">Open Navigation</span>
    </button></div>
  <nav>
    <ul class="navigation">
      <li class="sidebarItem">
        <!--v-if-->
        <ul>
          <li data-test-id="item"><a exactactiveclass="current" class="iconButton link link" title="Discover">
              <font-awesome-icon-stub aria-hidden="true" icon="fas,compact-disc" size="sm" fixed-width=""></font-awesome-icon-stub><span class="">Discover</span>
            </a></li>
        </ul>
      </li>
      <li class="sidebarItem">
        <h4 class="title">Browse</h4>
        <ul>
          <li data-test-id="item"><a exactactiveclass="current" class="iconButton link link" title="Music">
              <font-awesome-icon-stub aria-hidden="true" icon="fas,headphones" size="sm" fixed-width=""></font-awesome-icon-stub><span class="">Music</span>
            </a></li>
          <li data-test-id="item"><a exactactiveclass="current" class="iconButton link link" title="Radio Stations">
              <font-awesome-icon-stub aria-hidden="true" icon="fas,radio" size="sm" fixed-width=""></font-awesome-icon-stub><span class="">Radio Stations</span>
            </a></li>
          <li data-test-id="item"><a exactactiveclass="current" class="iconButton link link" title="Podcasts">
              <font-awesome-icon-stub aria-hidden="true" icon="fas,podcast" size="sm" fixed-width=""></font-awesome-icon-stub><span class="">Podcasts</span>
            </a></li>
        </ul>
      </li>
      <li class="sidebarItem">
        <h4 class="title">Music</h4>
        <ul>
          <li data-test-id="item"><a exactactiveclass="current" class="iconButton link link" title="Albums">
              <font-awesome-icon-stub aria-hidden="true" icon="fas,compact-disc" size="sm" fixed-width=""></font-awesome-icon-stub><span class="">Albums</span>
            </a></li>
          <li data-test-id="item"><a exactactiveclass="current" class="iconButton link link" title="Artists">
              <font-awesome-icon-stub aria-hidden="true" icon="fas,users" size="sm" fixed-width=""></font-awesome-icon-stub><span class="">Artists</span>
            </a></li>
          <li data-test-id="item"><a exactactiveclass="current" class="iconButton link link" title="Playlists">
              <font-awesome-icon-stub aria-hidden="true" icon="fas,list" size="sm" fixed-width=""></font-awesome-icon-stub><span class="">Playlists</span>
            </a></li>
          <li data-test-id="item"><a exactactiveclass="current" class="iconButton link link" title="Favourites">
              <font-awesome-icon-stub aria-hidden="true" icon="fas,heart" size="sm" fixed-width=""></font-awesome-icon-stub><span class="">Favourites</span>
            </a></li>
          <li data-test-id="item"><a exactactiveclass="current" class="iconButton link link" title="Genres">
              <font-awesome-icon-stub aria-hidden="true" icon="fas,music" size="sm" fixed-width=""></font-awesome-icon-stub><span class="">Genres</span>
            </a></li>
        </ul>
      </li>
      <li class="sidebarItem">
        <h4 class="title">Playlists</h4>
        <ul>
          <li data-test-id="item"><a exactactiveclass="current" class="iconButton link link" title="Random Playlist">
              <font-awesome-icon-stub aria-hidden="true" icon="fas,list" size="sm" fixed-width=""></font-awesome-icon-stub><span class="">Random</span>
            </a></li>
        </ul>
      </li>
    </ul>
  </nav>
</div>"
`;
